fixed the spacing on mobile for the social icons

--- a/styles.css
+++ b/styles.css
@@ -390,7 +390,7 @@ textarea {
 
 /** Media Queries **/
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1400px) {
     .social-inner {
         width: 90%;
         font-size: 1em;
@@ -400,10 +400,9 @@ textarea {
 }
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
     .social-inner i {
         font-size: 50px;
-
     }
 
     .test {
@@ -411,12 +410,11 @@ textarea {
     }
 
     #tour-bg {
-
         padding: 50px;
     }
 }
 
-@media screen and (max-width: 426px) {
+@media screen and (max-width: 450px) {
 
     .nav {
         justify-content: space-evenly;
@@ -454,12 +452,13 @@ textarea {
 
     .social-inner {
         width: 100%;
+        height: 60px;
         margin: 0px;
         justify-content: space-evenly;
     }
 
     .social-inner i {
-        font-size: 40px;
+        font-size: 20px;
 
     }
 
@@ -502,8 +501,6 @@ textarea {
             height: 200px;
         }
 
-        .social-inner i {
-            font-size: 30px;
-        }
+        
     }
 }
